# unsized-vec

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: actions.yml
benches/: bench.rs
emplacable/: Cargo.toml  README.md
emplacable/src/: lib.rs
emplacable/tests/: test.rs
examples/: rust-book-17-02.rs
src/: emplace.rs  helper.rs  inner.rs  lib.rs  marker.rs
src/helper/: valid_align.rs  valid_size.rs
src/inner/: aligned.rs  sized.rs  unaligned.rs
tests/: test.rs
