[package]
name = "unsized-vec"
version = "0.0.1-alpha.7"
edition = "2021"
authors = ["Jules Bertholet <julesbertholet@quoi.xyz>"]
description = "Like Vec, but for unsized values"
repository = "https://github.com/Jules-Bertholet/unsized-vec/"
license = "MIT OR Apache-2.0"
keywords = ["vec", "vector", "unsized"]
categories = ["data-structures", "no-std"]

[dependencies]
serde = { version = "1.0.145", optional = true, default-features = false }

[package.metadata.docs.rs]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
