[package]
name = "unsized-vec"
version = "0.0.2-alpha.11"
edition = "2021"
authors = ["Jules Bertholet <julesbertholet@quoi.xyz>"]
description = "Like Vec, but for unsized values"
repository = "https://github.com/Jules-Bertholet/unsized-vec/"
license = "MIT OR Apache-2.0"
keywords = ["vec", "vector", "unsized"]
categories = ["data-structures", "no-std"]

[workspace]
members = ["emplacable"]

[workspace.lints.rust]
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_op_in_unsafe_fn = "forbid"

[workspace.lints.clippy]
semicolon_if_nothing_returned = "warn"
undocumented_unsafe_blocks = "warn"

[dependencies]
emplacable = { path = "emplacable", version = "0.1.0-alpha.6", default-features = false, features = [
    "alloc",
] }
serde = { version = "1.0.193", optional = true, default-features = false }

[profile.bench]
codegen-units = 1
debug = true
lto = "fat"

[package.metadata.docs.rs]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "experimental" }
