[package]
name = "emplacable"
version = "0.1.0-alpha.2"
edition = "2021"
authors = ["Jules Bertholet <julesbertholet@quoi.xyz>"]
description = "Like Vec, but for unsized values"
repository = "https://github.com/Jules-Bertholet/unsized-vec/"
license = "MIT OR Apache-2.0"
keywords = ["vec", "vector", "unsized"]
categories = ["memory-management", "rust-patterns", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
alloc = []
std = ["alloc"]

[dependencies]
